syntax = "proto3";

option go_package = ".;community";

service MailService {
  rpc SendMail(SendMailRequest) returns (SendMailResponse) {}
}

message SendMailRequest {
  string address = 1;
  string receiver = 2;
  string subject = 3;
  string content_type = 4;
  string content = 5;
}

message SendMailResponse {}